--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/input_frag"
     tools:context="com.example.kylephan.learningapp.InputFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -20,7 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:hint="Enter a word"
+            android:hint="@string/word_input"
             android:inputType="text"
             android:selectAllOnFocus="true"
             android:singleLine="true"
@@ -34,11 +35,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:elevation="0dp"
-            android:text="Submit"
+            android:text="@string/submit_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toEndOf="@+id/wordInput"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="8dp" />
 
         <EditText
             android:id="@+id/numberInput"
@@ -47,11 +49,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:ems="10"
-            android:hint="Enter a number"
+            android:hint="@string/number_input"
             android:inputType="number"
             android:selectAllOnFocus="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wordInput" />
+            app:layout_constraintTop_toBottomOf="@+id/wordInput"
+            android:layout_marginLeft="16dp" />
 
         <Button
             android:id="@+id/numberButton"
@@ -59,11 +62,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:text="Submit"
+            android:text="@string/submit_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toEndOf="@+id/numberInput"
-            app:layout_constraintTop_toBottomOf="@+id/wordButton" />
+            app:layout_constraintTop_toBottomOf="@+id/wordButton"
+            android:layout_marginLeft="8dp" />
     </android.support.constraint.ConstraintLayout>
 
 
@@ -76,7 +80,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Default"
+        android:text="@string/display_text"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
