--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,42 +2,44 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/first"
-        android:title="@string/input_fragment" />
     <group
-        android:id="@+id/nav_group_1"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/second"
+            android:id="@+id/nav_first"
+            android:title="@string/input_fragment" />
+        <item
+            android:id="@+id/nav_second"
             android:title="@string/flickr_fragment" />
         <item
-            android:id="@+id/third"
-            android:title="@string/input_fragment" />
+            android:id="@+id/nav_third"
+            android:title="@string/balance_fragment" />
     </group>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
-    <group
-        android:id="@+id/nav_group_2"
-        android:checkableBehavior="none">
-        <item
-            android:id="@+id/sixth"
-            android:title="@string/input_fragment" />
-        <item
-            android:id="@+id/seventh"
-            android:title="@string/input_fragment" />
-        <item
-            android:id="@+id/eighth"
-            android:title="@string/input_fragment" />
-        <item
-            android:id="@+id/fourth"
-            android:title="@string/input_fragment" />
-        <item
-            android:id="@+id/fifth"
-            android:title="@string/input_fragment" />
-    </group>
+
+    <item
+        android:title="Sub Menu">
+        <menu>
+            <group
+                android:checkableBehavior="none">
+                <item
+                    android:id="@+id/nav_fourth"
+                    android:title="@string/input_fragment" />
+                <item
+                    android:id="@+id/nav_fifth"
+                    android:title="@string/input_fragment" />
+                <item
+                    android:id="@+id/nav_sixth"
+                    android:title="@string/input_fragment" />
+                <item
+                    android:id="@+id/nav_seventh"
+                    android:title="@string/input_fragment" />
+                <item
+                    android:id="@+id/nav_eighth"
+                    android:title="@string/input_fragment" />
+            </group>
+        </menu>
+    </item>
+
+
 
 
 </menu>
