Modified color scheme, input fragment restores user input on fragment change. Not rotation responsive yet.

--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -78,12 +78,16 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="@string/display_text"
         android:textAlignment="center"
-        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+     <!--TODO: remove this tag if I can set default text in inputFragment-->
+    <!--android:text="@string/display_text"-->
+    <!--android:textSize="24sp"-->
+
+
 </android.support.constraint.ConstraintLayout>
