--- a/app/src/main/res/layout/fragment_flickr_viewer.xml
+++ b/app/src/main/res/layout/fragment_flickr_viewer.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/flickr_frag"
-    tools:context="com.example.kylephan.learningapp.FlickrViewer"
+    tools:context="com.example.kylephan.learningapp.FlickrViewerFragment"
     android:orientation="vertical">
 
     <EditText
