--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#31458e</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#42a5f5</color>
+    <color name="colorPrimaryDark">#0077c2</color>
+    <color name="colorAccent">#80d6ff</color>
     <color name="bg">#ffffff</color>
     <color name="bgWindowColor">#878787</color>
     <color name="bgColor">#a37777</color>
