--- a/app/src/main/res/drawable/default_dot.xml
+++ b/app/src/main/res/drawable/default_dot.xml
@@ -4,9 +4,9 @@
         <shape
             android:innerRadius="0dp"
             android:shape="ring"
-            android:thickness="8dp"
+            android:thickness="4dp"
             android:useLevel="false">
-            <solid android:color="@android:color/holo_green_light"/>
+            <solid android:color="@color/defaultTab"/>
         </shape>
     </item>
 </layer-list>
